--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Facial-Game.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Facial-Game.data.br",
-        frameworkUrl: buildUrl + "/Facial-Game.framework.js.br",
-        codeUrl: buildUrl + "/Facial-Game.wasm.br",
+        dataUrl: buildUrl + "/Facial-Game.data",
+        frameworkUrl: buildUrl + "/Facial-Game.framework.js",
+        codeUrl: buildUrl + "/Facial-Game.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project",
